# desafio

./: .gitignore  audio.py  lyrics.py  main.py  menu.py  pyproject.toml  ruff.toml
